--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="./js/scripts.js"></script>
 </head>
 <body>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Twitch.tv Channel</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody class="streams">
+    </tbody>
+  </table>
 </body>
 </html>
