Centered all content

--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>Twitch.tv Channel</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody class="streams">
-    </tbody>
-  </table>
+  <div class="container-fluid">
+    <div class="row top-buffer">
+        <h1>Twitch.tv Viewer</h1>
+    </div>
+    <div class="row">
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Twitch.tv Channel</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody class="streams">
+        </tbody>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
